@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="wikokit.kiwidict"
-    android:versionCode="2"
-    android:versionName="0.092"
+    android:versionCode="4"
+    android:versionName="0.094"
     android:installLocation="preferExternal">
 
     <uses-sdk android:minSdkVersion="8" />
 
-    <!-- uses-permission android:name="android.permission.SET_DEBUG_APP" /  -->
+    <uses-permission android:name="android.permission.SET_DEBUG_APP" />
+    <!-- -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
